syntax = "proto3";
package DouyinPack;

message WebcastChatMessage {
     Common common = 1;
     User user = 2;
     string content = 3;
}

message WebcastGiftMessage {
     Common common = 1;
     int64 repeatCount =5;
     GiftUser user = 7;
     Gift gift = 15;
}

message WebcastLikeMessage {
     Common common = 1;
     int64 count =2;
     int64 total =3;
     int64 color =4;
     User user = 5;
};


message Chat {
    repeated WebcastChatMessage data = 1;
}

message User {
     int64 id =1;
     int64 shortId =2;
     string nickname = 3;
     // int64 gender = 4;
     // string signature =5;
     // int32 level =6;
     // int64 birthday =7;
     // string telephone = 8;
     // string city = 15;
     // int64 createTime = 17;
    // AvatarThumb avatarThumb =3;
}

message GiftUser {
    int64 id =1;
    int64 shortId =2;
    string nickname = 3;
    
   // AvatarThumb avatarThumb =3;
}

message Gift {
    string describe = 2;
    
}
message AvatarThumb {
    repeated string url_list =1;
     string uri =2;
}

message ApiResult {
    repeated message messages = 1;
     string cursor = 2;
     int32 fetch_interval = 3;
     uint64 now = 4;
     string internal_ext = 5;
}
message  message {
     string method = 1 ;
     bytes payload = 2;
     uint64 message_id = 3;
}
message Common {
     string method = 1;
     int64 msgId = 2;
     int64 roomId = 3;
     // bool isShowMsg =4;
    // optional int64 createTime = 4;
    // string priority_score =6;
}

message Image {
     string uri = 1;
}

message PublicAreaCommon {
     string userLabel = 1;
     int64 userConsumeInRoom = 2;
     int64 userSendGiftCntInRoom = 3;
}
